--- a/StudentRoleTrackerREST/WebContent/index.html
+++ b/StudentRoleTrackerREST/WebContent/index.html
@@ -10,9 +10,9 @@
   </head>
   <body>
     <div class="header"></div>
-    <h1>Hello Pain in My Butt</h1>
+    <h1>Student Role Tracker</h1>
       <div id='content' class="section"></div>
-      
+
 
     <script src="./js/app.js"></script>
   </body>
