--- a/StudentRoleTrackerREST/WebContent/index.html
+++ b/StudentRoleTrackerREST/WebContent/index.html
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Student Role Tracker</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"
-  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-  crossorigin="anonymous"></script>
-  </head>
-  <body>
-    <div class="header"></div>
-    <h1>Student Role Tracker</h1>
-      <div id='content' class="section"></div>
+<!-- bootstraps the module named "appModule" -->
+<html ng-app="appModule">
+<head>
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <title>Student Role Tracker</title>
+  <!-- AngularJS CDN -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.7/angular.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.7/angular-route.min.js"></script>
 
+  
+  <!-- sources in the js file for the module creation -->
+  <script src="app/appModule/app.module.js"></script>
+  <!-- Service -->
+  <script src="app/appModule/student.service.js"></script>
+  <!-- filters -->
+ 
+  <!-- component files which have a template url for creating html partials -->
+  <script src="app/appModule/navBar/navBar.component.js"></script>
+  <script src="app/appModule/studentList/studentList.component.js"></script>
+</head>
+<body>
+<!-- nav-bar doesn't get emptied out like ng-view so it's always there -->
+	<nav-bar class="navbar"></nav-bar>
+	
+	<student-list>Loading...</student-list>
 
-    <script src="./js/app.js"></script>
-  </body>
+ <!-- ng-view is where the content is brought in and actually displayed at. THIS is the single page -->
+  	<ng-view></ng-view>
+</body>
 </html>
